# mandelbrot-c

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  README_VIDEO_STUDIO.md  RESEARCH.md  app.js  build.bat  build.sh  coi-serviceworker.js  index.html  index.js  index.wasm  mandelbrot.js  mandelbrot.wasm  server.py  settings.json  style.css
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  codeql.yml  format.yml  linux.yml  macos.yml  memcheck.yml  release.yml  wasm.yml  windows.yml
assets/: palettes.json
assets/icons/: generate_icons.py
benchmarks/: CMakeLists.txt
benchmarks/cpu/: benchmark_bignum.c  benchmark_fractal_types.c  benchmark_math.c  benchmark_perturbation.c  benchmark_renderer.c  benchmark_screenshot.c
benchmarks/gpu/: benchmark_gpu.c
benchmarks/web/: run_benchmarks.bat  run_benchmarks.sh
benchmarks/web/build_wasm_bench/: benchmark_fractal_types.js  benchmark_fractal_types.wasm  benchmark_math.js  benchmark_math.wasm
core/: color.c  julia.c  mandelbrot.c
cpu-engine/: main.c  mandelbrot.c  renderer.c  renderer.h  screenshot.c  tour.c  tour.h
docs/: GPU_INFO.md
gpu-engine/: mandelbrot_kernel.cu
include/: app_state.h  bookmark.h  buffalo.h  burning_ship.h  camera.h  color.h  config.h  core_math.h  fractal.h  hud_sokol.h  ini_config.h  input_handler.h  julia.h  mandelbrot.h  perturbation.h  renderer.h  screenshot.h  settings_panel.h  settings_panel_sdl.h  tour.h  tricorn.h
include/app/: wasm_bridge.h
include/core/: buffalo.h  burning_ship.h  celtic.h  color.h  core_math.h  fractal.h  julia.h  mandelbrot.h  math_types.h  tricorn.h
include/engine/: app_state.h  bookmark.h  camera.h  config_loader.h  input_handler.h  perturbation.h  renderer.h  screenshot.h  tour.h
include/ui/: hud_sdl.h  hud_settings.h  hud_sokol.h  hud_video_studio.h
scripts/: compile_shaders.bat  compile_shaders.sh  embed_shader.cmake  gen_shaders.py  merge_shaders.py  server.py
shaders/: desktop_gpu_fs_cpu.glsl  desktop_gpu_fs_gpu.glsl  desktop_gpu_vs.glsl  mandelbrot.glsl
src/: julia.c  main.c  mandelbrot.c  renderer.c  screenshot.c  tour.c
src/app/: app_runner.c  app_runner.h  desktop_cpu_main.c  desktop_deep_main.c  desktop_gpu_main.c  desktop_gpu_shaders.h  headless_egl.c  headless_egl.h  mandelbrot.glsl.h  shaders.h  video_renderer_main.c  wasm_bridge.c  web_main.c
src/core/: bignum.c  bignum.h  buffalo.c  burning_ship.c  celtic.c  color.c  fractal.c  julia.c  mandelbrot.c  mandelbrot_bignum.c  mandelbrot_bignum.h  tricorn.c
src/cpu-engine/: main.c  renderer.c  renderer.h  screenshot.h  tour.c  tour.h
src/engine/: app_state.c  bookmark.c  bookmark.h  camera.c  camera.h  cjsonx_impl.c  config_loader.c  hud_sdl.c  hud_sdl.h  hud_sokol.c  hud_sokol.h  ini_config.c  input_handler.c  perturbation.c  renderer.c  renderer.h  screenshot.c  screenshot.h  tour.c  tour.h
src/gpu-engine/: gpu_main.c
src/platform/: universal_main.c
src/platform/desktop/: screenshot.c  screenshot.h
src/platform/web/: main_web.c
src/ui/: hud_sdl.c  hud_settings.c  hud_sokol.c  hud_video_studio.c  imgui_impl.cc  settings_panel.c  settings_panel_sdl.c
src/web-engine/: universal_main.c
tests/: CMakeLists.txt  Makefile  test_app_state.c  test_bignum.c  test_bookmark.c  test_camera.c  test_color.c  test_config.c  test_fractal.c  test_input_handler.c  test_math.c  test_perturbation.c  test_renderer.c  test_simd_math.c  test_tour.c
web/: app.js  coi-serviceworker.js  index.html  style.css
web-engine/: main_wasm.c  renderer_wasm.c  renderer_wasm.h  renderer_web.c  renderer_web.h
